@@ -1,5 +1,10 @@
 2008-10-21  Wakaba  <wakaba@suika.fam.cx>
 
+	* mkcommitfeed.pl: Oops, namespace URI was missing; namespaces is
+	always annoying :-<
+
+2008-10-21  Wakaba  <wakaba@suika.fam.cx>
+
 	* mkcommitfeed.pl: Don't use date from the ChangeLog content as
 	<updated> date.  Set |xmlns| attribute of the root |feed| element.
 
